Добавить поиск по username, друзей с чатами и поиск клубов по названию.
